--- a/backend/app/templates/demo/base.html
+++ b/backend/app/templates/demo/base.html
@@ -4,14 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <h1>她的名字是 {{ user.username }}</h1>
     {% if user.addr %}
     <h2>她住在 {{ user.addr }}</h2>
     {% endif %}
-    <div><a href="/index">home</a></div>
+    <div>
+        <a style="margin-right: 8px;" href="/index">home</a>
+        <a href="/about">about</a>
+    </div>
+    <button id="addTest">添加一个测试人员</button>
+    <button id="selectTest">查询</button>
     {% block content %}{% endblock %}
+
+    <script>
+        window.onload = function() {
+            document.getElementById('addTest').onclick = function() {
+                fetch('/add', { method: 'post' })
+                    .then(r => {
+                        console.log(r.json())
+                    })
+            }
+            document.getElementById('selectTest').onclick = function() {
+                fetch('/select')
+                    .then(r => {
+                        console.log(r.json())
+                    })
+            }
+        }
+    </script>
 </body>
 </html>
