--- a/backend/app/templates/demo/index.html
+++ b/backend/app/templates/demo/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-</head>
-<body>
-    <ul>
-        {% for post in posts %}
-        <li>{{ post.author.username }} says: <b>{{ post.body  }}</b></li> 
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends 'demo/base.html' %}
+
+{% block content %}
+<ul>
+    {% for post in posts %}
+    <li>{{ post.author.username }} says: <b>{{ post.body  }}</b></li> 
+    {% endfor %}
+</ul>
+{% endblock %}
