--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -1,32 +1,28 @@
 {% extends 'base.html' %} {% block css_source %}
-<link rel="stylesheet" href="static/css/index.css" />
+<link rel="stylesheet" href="/static/css/index.css" />
 {% endblock %} {% block content %}
 <div class="topic-wrap">
   <div id="topic-loading" class="spinner-border text-primary" role="status">
     <span class="sr-only">Loading...</span>
   </div>
-  <button id="topic-empty-add" class="btn btn-primary mb-3" style="display: none;">创建主题</button>
+  <div class="mb-3">
+    <span id="topic-empty-mess"></span>
+    {% if current_user.is_authenticated %}
+    <button id="topic-empty-add" class="btn btn-primary" style="display: none">
+      创建主题
+    </button>
+    {% endif %}
+  </div>
   <div id="topiclist-wrap" class="row"></div>
 </div>
 <!-- 创建主题 start -->
-<div
-  class="modal fade"
-  id="addTopicModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="addTopicModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="addTopicModal" tabindex="-1" role="dialog" aria-labelledby="addTopicModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addTopicModalLabel">创建主题</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -35,22 +31,11 @@
           <div id="addTopic-feedback"></div>
           <div class="form-group">
             <label for="topic-name" class="col-form-label">主题名称</label>
-            <input
-              type="text"
-              class="form-control"
-              id="topic-name"
-              name="name"
-              required
-            />
+            <input type="text" class="form-control" id="topic-name" name="name" required />
           </div>
           <div class="form-group">
             <label for="topic-desc">主题描述</label>
-            <textarea
-              class="form-control"
-              id="topic-desc"
-              name="desc"
-              rows="3"
-            ></textarea>
+            <textarea class="form-control" id="topic-desc" name="desc" rows="3"></textarea>
           </div>
         </form>
       </div>
@@ -59,11 +44,7 @@
           关闭
         </button>
         <button id="addTopicSubmitBtn" type="button" class="btn btn-primary">
-          <span
-            id="topic-submit-loading"
-            class="spinner-border spinner-border-sm"
-            style="display: none"
-          ></span>
+          <span id="topic-submit-loading" class="spinner-border spinner-border-sm" style="display: none"></span>
           登录
         </button>
       </div>
@@ -83,5 +64,5 @@
   </a>
 </script>
 {% endblock %} {% block js_source %}
-<script src="static/js/index.js"></script>
+<script src="/static/js/index.js"></script>
 {% endblock %}
