--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -161,6 +161,7 @@
     <script src="/static/lib/moment.min.js"></script>
     <script>
       const _token = "{{ csrf_token() }}";
+      // 绑定多个 onload 事件
       function addEventLoad(func) {
         const oldOnload = window.onload;
         if (typeof window.onload !== "function") {
@@ -171,6 +172,18 @@
             func();
           };
         }
+      }
+      // 获取指定的url查询参数
+      function getQueryVariable(variable) {
+        const query = window.location.search.substring(1);
+        const vars = query.split("&");
+        for (let i = 0; i < vars.length; i++) {
+          const pair = vars[i].split("=");
+          if (pair[0] == variable) {
+            return pair[1];
+          }
+        }
+        return false;
       }
     </script>
     <script src="/static/js/base.js"></script>
