--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -53,7 +53,7 @@
 </div>
 <!-- 创建主题 end -->
 <script type="text/html" id="oneTopicCardTemplate">
-  <a class="col-sm-12 col-md-4 col-lg-3 topic-linka" href="/topic/[topicId]">
+  <a class="col-sm-12 col-md-4 col-lg-3 topic-linka" href="/topic?id=[topicId]">
     <div class="topic-card mb-3">
       <div class="text-truncate topic-card-name">[topicName]</div>
       <div class="topic-line">
