--- a/backend/app/templates/register.html
+++ b/backend/app/templates/register.html
@@ -57,8 +57,8 @@
                             <label for="sex">性别<span class="text-muted">(可选)</span></label>
                             <select class="custom-select d-block w-100" id="sex" name="sex">
                                 <option value="">请选择</option>
-                                <option>男</option>
-                                <option>女</option>
+                                <option value="1">男</option>
+                                <option value="0">女</option>
                             </select>
                         </div>
                     </div>
