--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -12,7 +12,7 @@
     </button>
   </div>
   {% endif %}
-  <div id="topic-empty-mess" class="index-empty-wrap"></div>
+  <div id="topic-empty-mess" class="index-empty-wrap" style="display: none;">暂无主题</div>
   <div id="topiclist-wrap" class="row"></div>
 </div>
 <!-- 创建主题 start -->
