--- a/backend/app/templates/topic.html
+++ b/backend/app/templates/topic.html
@@ -15,7 +15,7 @@
   </div>
   
   <!-- 声明列表容器 -->
-  <div id="claims-list" class="list-group"></div>
+  <div id="claims-list" class="list-group" style="margin-bottom: 1rem;"></div>
 </div>
 
 <!-- 主题详情 模板 -->
